--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,5 +4,8 @@
     <script type="text/javascript" src="js/app_${project.version}.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style_${project.version}.css">
 </head>
-<body></body>
+<body>
+    <h1>Static resources versioning example</h1>
+    <button onclick="example()">Click me</button>
+</body>
 </html>
